# voice_identity

./: .gitignore  LICENSE  README.md  hacs.json  info.md  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: architecture_task.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  hacs.yml  hassfest.yml
custom_components/voice_identity/: __init__.py  artifact_integrity.py  attribution.py  (+40 more)
docs/: RELEASE_CHECKLIST.md
scripts/: deploy-to-ha.ps1
tests/: test_artifact_integrity.py  test_artifact_persistence.py  test_attribution_context_store.py  test_attribution_foundation.py  test_capability_discovery_operation.py  test_capability_registry.py  test_compatibility_migration_matrix.py  test_concierge_discovery_integration.py  test_concierge_voiceprofile_metadata_integration.py  test_config_flow.py  test_configuration_manager.py  test_contracts.py  test_delete_supersede_voiceprint_operation.py  test_diagnostics_provider.py  test_diagnostics_services.py  test_fault_injection_and_recovery.py  test_generate_voiceprint_operation.py  test_generation_orchestrator.py  test_hacs_release_readiness.py  test_health_state_engine.py  test_health_telemetry.py  test_identity_context.py  test_integration_runtime_health.py  test_model_execution_provider.py  test_performance_resource_hardening.py  test_quality_scoring_engine.py  test_release_readiness.py  test_repairs.py  test_sample_validation_pipeline.py  test_storage_provider.py  test_voiceprint_lifecycle.py  test_voiceprint_registry.py  test_voiceprint_revision.py  test_voiceprint_status_metadata_operation.py
(+68 files in other folders)
